Changed JS to try fix visibility bug. Us margin to position as position:fixed contributed to bug

--- a/app/assets/stylesheets/19-geolocation/geolocation.scss
+++ b/app/assets/stylesheets/19-geolocation/geolocation.scss
@@ -17,6 +17,5 @@
 }
 
 .geolocation__message-bottom{
-  position: fixed;
-  bottom: 0;
+  margin-top: 50vh;
 }
